pamc/src/tests/sample_code/should_fail/parse/check/question_checkee.ph
type Unit {
    .U: Unit,
}

let foo = check (?: Unit) {
    Unit.U
};
